Fixed search items not wrapping correctly

--- a/themes/modern/assets/css/style.css
+++ b/themes/modern/assets/css/style.css
@@ -1919,6 +1919,8 @@ code { background-color: black; color: #fff; width: 99%; }
 .pagination li { float: left; }
 .site-info { color: #777; }
 
+.cfr-line-wrap { word-wrap:break-word;white-space:normal; }
+
 section {
         position: relative;
         z-index: 1; /* needed for setting pseudo-element z-index */
